DERBY-6856: Eliminate build warnings related to RoundingMode and Class.newInstance() introduced by build 118 of JDK 9: commit derby-6856-05-ag-roundingMode-Class.newInstance.diff.
git-svn-id: https://svn.apache.org/repos/asf/db/derby/code/trunk@1745932 13f79535-47bb-0310-9956-ffa450edef68