@@ -42,7 +42,8 @@ public class insertMaps {
 	public static void main(String[] args) throws Exception {
 
 		System.out.println("Loading the Derby jdbc driver...");
-		Class.forName(CSdriver).newInstance();
+        Class<?> clazz = Class.forName(CSdriver);
+        clazz.getConstructor().newInstance();
 	
 		System.out.println("Getting Derby database connection...");
 		Connection connCS = DriverManager.getConnection(dbURLCS);
